# vANNilla

./: .gitignore  README.md  clean_test.sh  pyproject.toml  testing.py
data/: __init__.py  logic_operators.py  operator_dataset.py  regression.py
tests/: tensor_np_runtime_compare.py  test_compare_np.py  test_matrix.py  test_tensor.py  test_training.py  training_runtime.py
vANNilla/: __init__.py  layers.py  network.py  neuron.py  random.py
vANNilla/utils/: __init__.py  activation.py  loss.py  matrix.py  random.py  tensor.py
vaNNilla/: Network.py  Neuron.py  __init__.py  activation.py  loss.py  network.py  utils.py
vaNNilla/utils/: __init__.py  constants.py
