[tool.poetry]
name = "vANNilla"
version = "0.1.0"
description = "A zero-dependency artificial neural network"
authors = ["CharlesAverill <charlesaverill20@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
numpy = "^1.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
